# Scalgame

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  build.bat  premake5.lua
Engine/: premake5.lua
Engine/src/: Engine.h  Registry.h
Engine/src/Core/: Actor.cpp  Actor.h  Application.cpp  Attributes.cpp  Attributes.h  ChunkedTileMap.cpp  ChunkedTileMap.h  CommandMgr.cpp  CommandMgr.h  ComponentSystems.cpp  ComponentSystems.h  ComponentTypes.cpp  ComponentTypes.h  Components.h  Core.cpp  Core.h  Creature.cpp  Creature.h  DebugWindow.cpp  DebugWindow.h  Entity.cpp  Entity.h  EntityMgr.cpp  EntityMgr.h  EntityStuff.h  EntityV2.cpp  EntityV2.h  EntryPoint.h  Game.cpp  Game.h  Globals.h  Input.cpp  Input.h  Inventory.cpp  Inventory.h  LightMap.cpp  LightMap.h  LightSource.cpp  LightSource.h  Lighting.cpp  (+58 more)
Engine/src/Core/Allocators/: Linear.h  ScalAllocator.h
Engine/src/Core/MapGeneration/: BasicTileMap.h  MapGeneration.cpp  MapGeneration.h
Engine/src/Core/Rendering/: TileMapRenderer.h
Engine/src/Core/Structures/: BitArray.h  BitList.h  ComponentArray.h  DirectAccessTable.cpp  DirectAccessTable.h  EntityContainer.h  IndexArray.h  Queue.h  References.h  Registery.h  SArray.cpp  SArray.h  SHashMap.h  SHashMapDense.h  SHashMapLarge.h  SHashMapPool.h  SHashSet.h  SHoodSet.h  SHoodTable.h  SLinkedList.h  SList.h  SSet.h  STable.cpp  STable.h  SpareArray.cpp  SparseArray.h  SparseRegister.h  SparseSet.h  Stack.h  StaticArray.h  TreeMap.h
Engine/src/Core/Systems/: Scheduler.h
Engine/src/Core/Tools/: Instrument.cpp  Profiling.cpp  Profiling.h  Scheduler.h
Engine/src/Core/WickedEngine/: Jobs.cpp  Jobs.h  LICENSE.txt  ThreadWin32.cpp  ThreadWin32.h
Game/: premake5.lua
Game/assets/shaders/: bloom.frag  bloom.vert  blur.frag  blur.vert  brightness_filter.frag  light_tracer.comp  lighting.frag  lighting.vert  lighting2D.frag  lighting_v2.frag  lighting_v2.vert  tile_lighting.frag  tile_lighting.vert  tile_lighting_ray.frag  tile_lighting_ray.vert  tile_lighting_sampler.frag  tile_lit.frag  tile_shader.frag  tile_shader.vert  tilemap.frag  tilemap.vert
Game/assets/textures/: SpriteSheet.aseprite  UIAtlas.atlas
Game/assets/textures/Kitchen_Sink_v1.2/: LICENSE.txt
Game/assets/textures/atlas/: tiles.atlas  tiles_proj.tpproj
Game/assets/textures/fonts/: Silver.fnt  Silver_0.tga
Game/src/: Game.cpp
src/: GameHeaders.h  Main.cpp
src/core/: Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  ResourceManager.cpp  ResourceManager.h
src/core/registry/: Identifier.cpp  Identifier.h  Registry.h
src/grid/: Grid.cpp  Grid.h
src/input/: InputHandler.cpp  InputHandler.h  Keybinds.cpp  Keybinds.h
src/tiles/: GridTile.cpp  GridTile.h  HeatMapTile.cpp  HeatMapTile.h  TextureTile.cpp  TextureTile.h  Tile.h
src/world/: World.cpp  World.h
